log
Wed 24 Apr 2024 08:22:21 PM UTC: 
 tests:  0|6
total_score: 0/70
1e1015d
Wed 24 Apr 2024 08:26:33 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a5b35b4
Wed 24 Apr 2024 08:33:33 PM UTC: 
 hashmap.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:33: error: expected statement before ‘)’ token
   44 |   if (map->buckets[pos] == NULL)) {
      |                                 ^
hashmap.c:44:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
   44 |   if (map->buckets[pos] == NULL)) {
      |   ^~
hashmap.c:44:35: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   44 |   if (map->buckets[pos] == NULL)) {
      |                                   ^
hashmap.c:48:3: error: ‘else’ without a previous ‘if’
   48 |   else{
      |   ^~~~
cc1: all warnings being treated as errors
Compilation failed
5882051
Wed 24 Apr 2024 08:34:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
e158e73
Wed 24 Apr 2024 08:42:24 PM UTC: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
2f7fcc2
Wed 24 Apr 2024 08:54:16 PM UTC: 
 hashmap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:78:35: error: expected statement before ‘)’ token
   78 |   while(map->buckets[pos] != NULL)){
      |                                   ^
hashmap.c:78:3: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
   78 |   while(map->buckets[pos] != NULL)){
      |   ^~~~~
hashmap.c:78:36: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
   78 |   while(map->buckets[pos] != NULL)){
      |                                    ^
cc1: all warnings being treated as errors
Compilation failed
2ee1c0e
Wed 24 Apr 2024 08:54:30 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
8508311
Wed 24 Apr 2024 08:57:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
4742032
Wed 24 Apr 2024 09:06:50 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:102:1: error: control reaches end of non-void function [-Werror=return-type]
  102 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d42cc31
Wed 24 Apr 2024 09:14:08 PM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|2
total_score: 50/70
0e9bc9a
Wed 24 Apr 2024 09:16:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:108:1: error: control reaches end of non-void function [-Werror=return-type]
  108 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c9e27b0
Wed 24 Apr 2024 09:17:00 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
21a49e4
Wed 24 Apr 2024 09:17:40 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
7105abe
Wed 24 Apr 2024 09:18:47 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
bd08156
Wed 24 Apr 2024 09:19:04 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
6daa012
Wed 24 Apr 2024 09:20:14 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
282e31d
Wed 24 Apr 2024 09:23:38 PM UTC: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  0|0
de2c3a6
Wed 24 Apr 2024 09:25:08 PM UTC: 
 hashmap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
2e834c0
Wed 24 Apr 2024 09:26:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b3fd601
Wed 24 Apr 2024 09:29:12 PM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
da80834
Wed 24 Apr 2024 09:33:08 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
531c343
